# pseudostate

./: .gitignore  .nojekyll  AGENTS.md  README.md  commit-config.yaml  get_started.html  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: documentation.yml  publish.yml  python-package.yml
docs/: .gitignore  _brand.yml  _quarto.yml  _sidebar.yml  get_started.qmd  objects.json
docs/_site/: search.json
docs/_site/reference/: index.html
docs/_site/site_libs/bootstrap/: bootstrap-17eaa1ba0af56b0e792e2f9f17513827.min.css
docs/reference/: index.qmd
reference/: calculate_pseudostates.html  index.html
site_libs/bootstrap/: bootstrap-2e6c4b3b973e0d28d75d851604906721.min.css  bootstrap-dark-347f068e982c71977847b8ead28e4506.min.css  bootstrap-dark-784d68ddb2eaaa63462f26a7eb4ad142.min.css  bootstrap-f608c60e8059425955e0a613f06d8128.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-540fbd43b50a879bb55c430ca1f86494.css  quarto-syntax-highlighting-8c72952ee3bb7393c4da19789dad797f.css  quarto-syntax-highlighting-dark-f249475e52cfe1a8e33717ce9f888b08.css
src/pseudostate/: __init__.py  pseudo.py
tests/: test_pseudotest.py
