[project]
name = "pseudostate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Uriah Finkel", email = "ufinkel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pseudostate = "pseudostate:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo>=0.16.5",
    "polarstate>=0.1.8",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "quartodoc>=0.11.1",
]
